# tower

./: 12-week-content-calendar.md  7_DAY_GROWTH_SPRINT.md  90_DAY_GROWTH_SPRINT.md  AFFILIATE_APPLICATION_SPRINT.md  AFFILIATE_LINK_DEPLOYMENT_GUIDE.md  AGENT_SWARM_COMPLETE_SUMMARY.md  AMAZON_POD_SEPARATION_COMPLETE.md  ARTICLES_MASTER_INDEX.md  AUTOMATION_INFRASTRUCTURE_DEPLOYED.md  BOOKCLI_QUALITY_COMPLETE_2026-02-12.md  BOOK_IMPROVEMENT_ACTION_PLANS.md  BOOK_IMPROVEMENT_INDEX.md  BOOK_IMPROVEMENT_QUICK_REFERENCE.md  BOOK_IMPROVEMENT_SUMMARY.md  BOOK_IMPROVEMENT_TRACKER.md  BULK_ARTICLE_GENERATION_SUMMARY.txt  COMPLETE_PACKAGE_FINAL_STATUS.md  COMPREHENSIVE_PROJECT_REVIEW_2026-02-13.md  COMPREHENSIVE_RESOURCES.md  CONTENT_EXPANSION_API_INTEGRATION.md  CONTENT_EXPANSION_EXECUTION_CHECKLIST.md  CONTENT_EXPANSION_EXECUTIVE_SUMMARY.md  CONTENT_EXPANSION_START_HERE.md  CONTENT_EXPANSION_STRATEGY.md  CURRENT_STATUS_AND_NEXT_STEPS.md  DAY_1_QUICK_CHECKLIST.md  DAY_1_START_BUILDING_NOW.md  DAY_2_POLISH_AND_UI.md  DELIVERABLES.md  DELIVERY_SUMMARY.txt  DEPLOYMENT_READY.txt  DEPLOY_AFFILIATE_NOW.md  E-E-A-T_SESSION_COMPLETE.md  EEAT_SIGNALS_IMPLEMENTATION.md  EEAT_SIGNALS_NO_BIOS.md  EXECUTE_1M_PLAN.md  FINAL_EXECUTION_SUMMARY.md  FINAL_MASTER_STATUS.md  FINAL_SESSION_SUMMARY.md  FULL_PORTFOLIO_LAUNCH_STATUS.md  (+97 more)
acquisition-system/: .dockerignore  .gitignore  ARCHITECTURE.md  AUTOMATION_READY.md  BOOTSTRAP_MODE.md  BOOTSTRAP_QUICKSTART.md  CLAUDE.md  COMPLETE_SUMMARY.md  DELIVERY_COMPLETE.md  DEPLOYMENT_SUCCESS.md  Dockerfile  HOW_IT_WORKS.md  PRODUCTION_CHECKLIST.md  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  START_HERE.md  TROUBLESHOOTING.md  alembic.ini  docker-compose.yml  pyproject.toml
acquisition-system/backend/: __init__.py  cli.py  requirements.txt
acquisition-system/config/: .env.example
acquisition-system/dashboard/: DASHBOARD_README.md  RUN.md  legacy-mockup.html  package.json  tailwind.config.ts
acquisition-system/database/: schema.sql
acquisition-system/go-to-market/: EXECUTIVE_SUMMARY.md  LAUNCH_PLAN.md  README.md
acquisition-system/landing-page/: index.html
acquisition-system/scripts/: README.md  bootstrap_pipeline.py  deploy-landing-page.sh  extract-targets.sh  launch.sh  quick_start.py  setup-tools.sh  setup.sh  start-dashboard.sh
acquisition-system/tests/: conftest.py  conftest_api.py  factories.py  test_api_businesses.py  test_api_campaigns.py  test_api_deals.py  test_api_health.py  test_api_leads.py  test_email_waterfall.py  test_response_classifier.py  test_valuation.py  (+2 more)
(+1187 files in other folders)
