[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "acquisition-system"
version = "0.1.0"
description = "AI-powered business acquisition system for identifying retiring owners"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}

dependencies = [
    # Core
    "python-dotenv>=1.0.0",
    "pydantic>=2.5.3",
    "pydantic-settings>=2.1.0",

    # Database
    "psycopg2-binary>=2.9.9",
    "sqlalchemy>=2.0.25",
    "alembic>=1.13.1",

    # Web scraping
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.3",
    "lxml>=5.1.0",
    "playwright>=1.41.2",

    # Data processing
    "pandas>=2.2.0",
    "numpy>=1.26.3",

    # Machine learning
    "scikit-learn>=1.4.0",
    "xgboost>=2.0.3",
    "lightgbm>=4.3.0",
    "imbalanced-learn>=0.12.0",

    # AI & Personalization
    "anthropic>=0.18.1",

    # Web server
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",

    # HTTP & API clients
    "httpx>=0.26.0",
    "aiohttp>=3.9.3",

    # Email
    "email-validator>=2.1.0",

    # Utilities
    "python-dateutil>=2.8.2",
    "pytz>=2024.1",
    "tenacity>=8.2.3",
    "ratelimit>=2.2.1",
    "cachetools>=5.3.2",
    "phonenumbers>=8.13.29",

    # Monitoring
    "sentry-sdk>=1.40.0",

    # Scheduling
    "schedule>=1.2.1",

    # CLI
    "click>=8.1.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.4",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "black>=24.1.1",
    "flake8>=7.0.0",
    "mypy>=1.8.0",
    "factory-boy>=3.3.0",
]
scraping = [
    "scrapy>=2.11.0",
    "scrapy-playwright>=0.0.34",
]
openai = [
    "openai>=1.12.0",
]

[project.scripts]
acquire = "backend.cli:cli"

[tool.setuptools.packages.find]
include = ["backend*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
markers = [
    "integration: marks tests as integration tests (requires database)",
]
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.coverage.run]
source = ["backend"]
omit = ["tests/*", "*/cli.py"]

[tool.coverage.report]
show_missing = true
fail_under = 60
